style(css): ensure truncated badges fit container (max-width: 100%)

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,3 +4,8 @@
 .card-img-top {
     height: 12em;
 }
+
+.badge.text-truncate {
+    max-width: 100%;
+    display: inline-block;
+}
